objects/CustomerSatisfactionReport__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CustomerSatisfactionReport</description>
    <fields>
        <fullName>Customer_Key_Areas_of_Dissatisfaction__c</fullName>
        <label>Customer_Key_Areas_of_Dissatisfaction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Improvement__c</fullName>
        <label>Customer_Satisfaction_Improvement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_QBR_Forecast__c</fullName>
        <label>Next_QBR_Forecast</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_QBR2_Action_Plan__c</fullName>
        <label>Post_QBR2_Action_Plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2A_Next_QBR_Barchart2__c</fullName>
        <label>2A Next QBR Barchart2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2A_Next_QBR_Barchart__c</fullName>
        <label>2A Next QBR Barchart</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Customer Satisfaction Report</label>
</CustomObject>